tests/checker/diagnostics/0381_exception_constructor_arg_mismatch_07.ml.infer.expected
File "0381_exception_constructor_arg_mismatch_07.ml", line 1:
Warning 24 [bad-module-name]: bad source file name: 0381_exception_constructor_arg_mismatch_07 is not a valid module name.

File "0381_exception_constructor_arg_mismatch_07.ml", line 2, characters 14-18:
2 | let _ = E_eta true
                  ^^^^
Error: This expression should not be a boolean literal, the expected type is
       int
